--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "latest",
     "expo": "^32.0.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.7.1",
